# KundaliMatch

./: .env  .gitignore  Dockerfile  README.md  config.py  docker-compose-ec2.yml  docker-compose-local.yml  docker-compose.yml  kundali_score.py  makefile  match.py  prompts.txt  requirements.txt  scratchpad.ipynb  test-commands.txt
backend/: config.py  match.py  scratchpad.ipynb  snowflake_utils.py
docs/: dummy_data_v2.json  match_py.txt  networking.md  prompts.txt  table.txt  test-commands.txt  twillio.js  validating_certs.md
kundali_service/: Dockerfile  app.py  requirements.txt
service-backend/: Dockerfile  backend.py  check_profile_table.csv  config.py  match.py  matching_2025-06-11.csv  profile_2025-06-11.csv  prompts.yaml  requirements.txt  scratchpad.ipynb  snowflake_utils.py  test_backend_endpoints.py
service-destiny/: agent.py  requirements.txt  scratchpad.ipynb
service-destiny/crewai/conversation/: README.md  pyproject.toml  report.md
service-destiny/crewai/conversation/src/conversation/: crew.py  main.py
service-destiny/crewai/conversation/src/conversation/config/: agents.yaml  tasks.yaml
service-kundali/: Dockerfile  app.py  kundali.ipynb  kundali_score.py  requirements.txt
testing_and_documentation/: primary_table_dummy_data.json  test-commands.txt
